tests/snapshots/runtime_error_fixtures/runtime_trace_error.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/runtime_trace_error.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 1 error • examples/runtime_errors/runtime_trace_error.flx
error[E300]: Type Mismatch

I found a type mismatch.

  examples/runtime_errors/runtime_trace_error.flx:3:3
  |
3 |   1 + None;
  |   ^^^^^^^^
  |   -------- this expression has type `Option<_>`

  |   -------- this type mismatch is reported here

Note:
  expected type: Int
  found type: Option<_>
  the conflicting types meet at this expression

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.
